Bug 368119 - Line Tool - strange line to corner
Summary: Line Tool - strange line to corner
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 3.0.1 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-09-01 19:47 UTC by eliotJ
Modified: 2017-05-22 04:38 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video with bug appearing (153.82 KB, video/mp4)
2016-09-01 20:19 UTC, eliotJ
Details
Video showing that issue also effects brush tool when using mouse (368.45 KB, video/mp4)
2016-09-02 04:32 UTC, elkmug
Details
Line tool win7 preview bug (146.48 KB, video/mp4)
2016-09-02 14:25 UTC, elkmug
Details
(Video example) (524.36 KB, video/mp4)
2016-09-07 00:24 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description eliotJ 2016-09-01 19:47:57 UTC
I showing this bug on the video which I will attach in comment.  I affraid this bug started to appear after dmitry's fix for "Finish line" (option from Stabilizer), which was commited lately... This bug makes "Line Tool" unusable...

This bug appear for me often, but sadly I don't know how exactly reproduce it... I hope this will be fixed for v3.0.1 stable.

Windows 7 64 bit, Nvidia GeForce G 103M, Intel dual Core 2,2 Ghz, 4 GB Ram.

Reproducible: Always
Comment 1 eliotJ 2016-09-01 20:19:48 UTC
Created attachment 100889 [details]
video with bug appearing
Comment 2 elkmug 2016-09-02 04:30:04 UTC
This is another symptom of the issue I detailed in Comment 1 of the "finish line" bug[364183]
https://bugs.kde.org/show_bug.cgi?id=364183

Since the resolution of 364183 didn't fix Comment 1, I figured it was a separate problem and 
was going to create a new bug, but you beat me to it.

Some additional info. The issue from 364183, Comment 1,  does affect both Win & Linux, but only happens when using a mouse for drawing. 

I've also added a video showing the issue with the brush tool.
Comment 3 elkmug 2016-09-02 04:32:06 UTC
Created attachment 100891 [details]
Video showing that issue also effects brush tool when using mouse
Comment 4 eliotJ 2016-09-02 12:06:19 UTC
Hmmm...

1. My bug is related to "Line Tool", yours to the "Freehand Brush Tool" with "Stabilizer" and without "Finish Line" enabled.
2. My bug appears while using Wacom Intuos Pro M, you have used mouse...
3. Yours bug looks like brush doesn't stop to paint after release left mouse button, my gives one straight line to the corner of the Canvas after release stylus pressure...

I don't know if both bugs has the same reason...
Comment 5 elkmug 2016-09-02 14:23:01 UTC
I've always assumed (and I could be wrong, because I can always be wrong) that the Line tool is a highly specialized version of the Brush tool. 

And given the rather unusual initial error of drawing a vector to image pixel [0,0] I think there's a good chance it's the same issue. Even if it manifests itself somewhat differently in each tool.

One Interesting note: on Win7(haven't downloaded the Linux appimage yet) the Line tool's unwanted vector only happens in the preview and is not actually drawn! Weird. This happens with both  tablet and mouse. I've attached another video demonstrating this. The first line is the mouse, the second line is the Wacom tablet. krita 3.0.99.91
Comment 6 elkmug 2016-09-02 14:25:29 UTC
Created attachment 100898 [details]
Line tool win7 preview bug
Comment 7 Jelena 2016-09-03 07:07:31 UTC
Activating the stabilizer at the brush tool at krita 3.0.99.91 on OSX has another strange effect for me which might be related:

I draw a stroke from position A to B, then release the mouse. Then I click at position C to start a new stroke. On mousedown a stroke from C to B gets drawn. When I then start the moving the cursor (with mousedown) a stroke from B back to C gets drawn and only then the stroke starts to follow my mouse as expected.
Comment 8 mvowada 2016-09-07 00:24:44 UTC
Created attachment 100959 [details]
(Video example)

Confirming the initial Description. (krita-3.0.1-x86_64.appimage - Ubuntu 14.04).

Most of the times, "Line tool" adds an unintended stroke connecting the starting point of the line to the origin of the canvas.
Comment 9 David REVOY 2016-09-07 20:27:13 UTC
I can also reproduce here with krita-3.0.1-x86_64.appimage :
It works also with the 'V' key while drawing with freehand brush. 
video: http://www.davidrevoy.com/XYZ/2016-09-07_video-raw-part1.webm
( desktop: XFCE, Manjaro Linux, intuos3A4, dual screen, nvidia proprietary driver )
Comment 10 eliotJ 2016-09-07 20:53:23 UTC
Thx all for testing. I hope it will be fixed soon :)
Comment 11 Dmitry Kazakov 2016-10-24 09:26:12 UTC
Git commit fb9ba2c7bb082dad96a8e9a3041c535dc7b14731 by Dmitry Kazakov.
Committed on 24/10/2016 at 09:25.
Pushed by dkazakov into branch 'kazakov/undo-with-instant-preview-T2544'.

Always use Basic Smoothing for Line Tool

Basically, line tool doesn't know how to use Stabilizer.
Fixes T4102

M  +10   -10   libs/ui/tool/kis_smoothing_options.cpp
M  +1    -1    libs/ui/tool/kis_smoothing_options.h
M  +4    -2    libs/ui/tool/kis_tool_freehand_helper.cpp
M  +2    -1    libs/ui/tool/kis_tool_freehand_helper.h
M  +4    -1    plugins/tools/basictools/kis_tool_line_helper.cpp

http://commits.kde.org/krita/fb9ba2c7bb082dad96a8e9a3041c535dc7b14731