Always use Basic Smoothing for Line Tool

Basically, line tool doesn't know how to use Stabilizer.

BUG:368119
Fixes T4102